<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nogs.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.nogs.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.nogs.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.nogs.ui.login.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.nogs.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_entities"
        android:name="com.example.nogs.ui.entities.EntitiesFragment"
        android:label="@string/menu_entities"
        tools:layout="@layout/fragment_donate" />

    <fragment
        android:id="@+id/nav_donate"
        android:name="com.example.nogs.ui.donuts.DonateFragment"
        android:label="@string/menu_donate"
        tools:layout="@layout/donate_fragment" />

    <fragment
        android:id="@+id/nav_statics"
        android:name="com.example.nogs.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statics"
        tools:layout="@layout/statistics_fragment" />
</navigation>