<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_login" />
        <!--        <item-->
        <!--            android:id="@+id/nav_gallery"-->
        <!--            android:icon="@drawable/ic_menu_gallery"-->
        <!--            android:title="@string/menu_gallery" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_slideshow"-->
        <!--            android:icon="@drawable/ic_menu_slideshow"-->
        <!--            android:title="@string/menu_slideshow" />-->
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_entities"
            android:icon="@drawable/ic_baseline_add_business_24"
            android:title="@string/menu_entities" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_donate" />
        <item
            android:id="@+id/nav_statics"
            android:icon="@drawable/ic_baseline_graphic_eq_24"
            android:title="@string/menu_statics" />
    </group>
</menu>